[package]
name = "dos-attack-tool"
version = "0.1.0"
authors = ["相田 優希 <51500566+aida0710@users.noreply.github.com>"]
edition = "2021"

[dependencies]
pcap = { version = "2.2.0", features = ["capture-stream"] }
pnet = { version = "0.35.0" }
chrono = { version = "0.4.38" }
flate2 = { version = "1.0.33" }
dotenv = { version = "0.15.0" }
base64 = { version = "0.22.1" }